fixed contact overlap and works css

--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -1,7 +1,7 @@
 .contact-section {
-  margin: auto;
+  margin: 0 auto;
   padding-bottom: 100px;
-  margin-top: 100px;
+  margin-top: 200px;
 }
 .contact-section h3 {
   font-size: 60px;
@@ -83,7 +83,8 @@ a.contact-social {
     margin-top: 20px;
   }
   .contact-section {
-    margin-top: 50px;
+    margin: 0 auto;
+    margin-top: 150px;
     padding-bottom: 50px;
   }
   .contact-container {
